--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "halcyonlv",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.87.29:3001",
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "nodemailer": "^6.4.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-server": "nodemon main.js",
+    "start-client": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
