--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "halcyonlv",
-  "version": "0.1.0",
+  "name": "halcyon",
+  "version": "1.0.0",
   "private": true,
-  "proxy": "http://192.168.87.29:3001",
+  "proxy": "http://192.168.87.29:3000",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.15",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "express-validator": "^6.6.1",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "nodemailer": "^6.4.10",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
-    "start-server": "nodemon main.js",
-    "start-client": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "build": "webpack --mode=production",
+    "build-dev": "webpack --mode=development",
+    "start": "nodemon ./main.js",
+    "watch": "webpack --watch --mode=development"
   },
   "eslintConfig": {
     "extends": "react-app"
