--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
