--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "halcyon-fm",
-    "description": "Website for future riddim label Halcyon",
+    "description": "Website for the music label Halcyon",
     "version": "2.0.0",
     "proxy": "http://localhost:3000",
     "engines": {
-        "node": "17.x"
+        "node": "21.x"
     },
     "devDependencies": {
         "@babel/core": "^7.18.13",
@@ -19,7 +19,7 @@
         "sass": "^1.54.8",
         "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
-        "webpack": "^5.74.0",
+        "webpack": "^5.91.0",
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
