--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "2.0.0",
     "proxy": "http://localhost:3000",
     "engines": {
-        "node": "21.x"
+        "node": "20.11.1",
+        "npm": "10.2.4"
     },
     "devDependencies": {
         "@babel/core": "^7.18.13",
